# libataxx

./: .gitignore  CMakeLists.txt  README.md  makefile
examples/: CMakeLists.txt  LICENSE  benchmark.cpp  engine.cpp  perft.cpp  pgn.cpp  split.cpp  tt.hpp  ttperft.cpp  tttperft.cpp
examples/dynamic/: main.cpp  makefile
examples/engine/: main.cpp  makefile
examples/perft/: main.cpp  makefile
examples/pgn/: main.cpp  makefile
examples/play/: main.cpp
examples/static/: main.cpp
examples/ttperft/: main.cpp  makefile
src/: CMakeLists.txt  calculate_hash.cpp  count_legal_moves.cpp  count_moves.cpp  gameover.cpp  get_fen.cpp  hash.cpp  is_legal_move.cpp  legal_captures.cpp  legal_move.cpp  legal_moves.cpp  legal_noncaptures.cpp  lookup.cpp  makemove.cpp  movegen.cpp  perft.cpp  predict_hash.cpp  set_fen.cpp
src/include/: file.hpp  move.hpp  position.hpp  side.hpp  square.hpp
src/libataxx/: bitboard.hpp  engine.hpp  file.hpp  libataxx.hpp  lookup.hpp  move.hpp  pgn.hpp  piece.hpp  position.hpp  rank.hpp  side.hpp  square.hpp  uaiengine.hpp  zobrist.hpp
tests/: CMakeLists.txt  combined_moves.cpp  count_legal_moves.cpp  count_moves.cpp  counters.cpp  from_uai.cpp  gameover.cpp  get_fen.cpp  get_hash.cpp  hash.cpp  is_gameover.cpp  is_legal_move.cpp  legal_captures.cpp  legal_move.cpp  legal_noncaptures.cpp  makefile  move.cpp  passing.cpp  perft.cpp  pgn.cpp  reachable.cpp  result.cpp  score.cpp  set_get.cpp  set_turn.cpp  square.cpp  test.cpp  transformations.cpp
